k8s/o11y-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-prom-stack-grafana
spec:
  selector:
    app: kube-prom-stack-grafana
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
