k8s/thingly-static-lb.yaml
apiVersion: v1
kind: Service
metadata:
  name: thingly-static
spec:
  selector:
    app: thingly-static
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: LoadBalancer
