k8s/flask-hello-world-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flask-hello-world-ingress
  namespace: test
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /hello
spec:
  tls:
  - hosts:
    - "*.thingly.net"
    secretName: thingly.net-tls
  rules:
  - host: www.thingly.net
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: flask-hello-world
            port:
              number: 80
