k8s/thingly-static.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: thingly-static-ingress
  namespace: www
  annotations:
    cert-manager.io/cluster-issuer: lets-encrypt
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
spec:
  tls:
  - hosts:
    - thingly.net
    - www.thingly.net
    secretName: thingly.net-tls
  rules:
  - host: thingly.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thingly-static
            port:
              number: 80
  - host: www.thingly.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: thingly-static
            port:
              number: 80
